# AvSdk_Android_Simple

sdk/: README.md
src/demo_src/: README.md  local.properties  settings.gradle
src/demo_src/app/: CMakeLists.txt  build.gradle
src/demo_src/app/src/main/: AndroidManifest.xml
src/demo_src/app/src/main/cpp/: native-lib.cpp
src/demo_src/app/src/main/java/com/example/previewdemo/: CameraDisplayActivity.java  FloatViewService.java  MainActivity.java  MyUtil.java  ScreenDisplayActivity.java
src/demo_src/app/src/main/res/layout/: activity_camera_display.xml  activity_main.xml  activity_screen_display.xml  image_display.xml  top_title.xml
src/demo_src/app/src/main/res/values/: array.xml  strings.xml  themes.xml
src/demo_src/app/src/main/res/values-night/: themes.xml
src/demo_src/gradle/wrapper/: gradle-wrapper.properties
src/sdk_src/: README.md  local.properties  settings.gradle
src/sdk_src/app/: CMakeLists.txt  build.gradle
src/sdk_src/app/src/main/: AndroidManifest.xml
src/sdk_src/app/src/main/cpp/: CImageUtil.c  ImageHelper.c
src/sdk_src/app/src/main/cpp/include/: ImageHelper.h
src/sdk_src/app/src/main/java/com/camera/sdk/: AVmediaMuxer.java  AudioEncoder.java  AudioHelper.java  CallbackFactory.java  Camera1Helper.java  ConfigData.java  Constants.java  ImageFormatUtil.java  JniImageUtil.java  LogUtil.java  PermissionUtil.java  ScreenHelper.java  SdkMedia.java  VideoEncoder.java  WaveHeader.java
src/sdk_src/app/src/main/res/layout/: activity_lauch.xml  activity_main.xml
src/sdk_src/app/src/main/res/raw/: watermark.yuv
src/sdk_src/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
src/sdk_src/gradle/wrapper/: gradle-wrapper.properties
